[package]
name = "patisson-binance-sdk"
version = "0.1.2"
edition = "2024"
authors = ["Yurii Musolov <yurii.musolov@gmail.com>"]
description = "Unofficial Rust SDK for the Binance exchange API"
keywords = ["binance", "sdk", "crypto", "trading", "cryptocurrency"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/patisson-binance-sdk"
repository = "https://github.com/yurii-musolov/patisson-binance-sdk"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.20", features = ["json"] }
rust_decimal = { version = "1.37.2", features = [
  "std",
  "macros",
  "serde-str",
  "serde-with-str",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_repr = "0.1.20"
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
